--- a/theme/luci-theme-argon-mc/Makefile
+++ b/theme/luci-theme-argon-mc/Makefile
@@ -1,16 +1,17 @@
-#
 # Copyright (C) 2008-2019 Jerrykuku
+# Copyright (C) 2019 Lienol
 #
 # This is free software, licensed under the Apache License, Version 2.0 .
 #
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=Argon Theme
+LUCI_TITLE:=Argon Magic Change Theme
 LUCI_DEPENDS:=
-PKG_VERSION:=1.1
-PKG_RELEASE:=01-20190809
+PKG_VERSION:=1.0
+PKG_RELEASE:=05-20191104
 
 include $(TOPDIR)/feeds/luci/luci.mk
+#include ../luci_my.mk
 
 # call BuildPackage - OpenWrt buildroot signature
