--- a/OpenAppFilter-master/oaf/src/Makefile
+++ b/OpenAppFilter-master/oaf/src/Makefile
@@ -1,2 +1,2 @@
-oaf-objs := app_filter.o af_utils.o  regexp.o cJSON.o app_filter_config.o
+oaf-objs := app_filter.o af_utils.o  regexp.o cJSON.o app_filter_config.o af_log.o
 obj-m += oaf.o
