smartdns: bump to 2019-12-28

--- a/smartdns-master/smartdns/Makefile
+++ b/smartdns-master/smartdns/Makefile
@@ -20,8 +20,8 @@ PKG_NAME:=smartdns
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/pymumu/smartdns.git
 
-PKG_REV:=d6c34658af0d4aac94655a139030c5ec12884754
-PKG_VERSION:=1.2019.11.02-1102
+PKG_REV:=198d18f18a69d4fc6b2d02c6d1424c6794beca62
+PKG_VERSION:=1.2019.12.28
 PKG_RELEASE:=1
 PKG_LICENSE:=GPL-3.0
 
