--- a/luci-app-unblockmusic-master/luci-app-unblockmusic/Makefile
+++ b/luci-app-unblockmusic-master/luci-app-unblockmusic/Makefile
@@ -10,13 +10,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-unblockmusic
-PKG_VERSION:=2.2.0
-PKG_RELEASE:=1
+PKG_VERSION:=v2.2.3
+PKG_RELEASE:=3
 
 PKG_LICENSE:=Apache-2.0
 
 LUCI_TITLE:=LuCI support for Unblock NeteaseCloudMusic
-LUCI_DEPENDS:=+UnblockNeteaseMusic +bash +dnsmasq-full +ipset
+LUCI_DEPENDS:=+UnblockNeteaseMusic +bash +dnsmasq-full +ipset +libopenssl +busybox +wget +tar
 LUCI_PKGARCH:=all
 
 PKG_MAINTAINER:=<https://github.com/maxlicheng/luci-app-unblockmusic>
